# 52Hz

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  project-meta.json  test-run.sh
.claude/skills/code-to-spec/: SKILL.md
.claude/skills/code-to-tests/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/evaluate-plan/: SKILL.md
.claude/skills/install/: SKILL.md
.claude/skills/make-plan/: SKILL.md
.claude/skills/refactor-code/: SKILL.md
.claude/skills/refactor-spec/: SKILL.md
.claude/skills/refactor-tests/: SKILL.md
.claude/skills/spec-to-code/: SKILL.md
.claude/skills/spec-to-tests/: SKILL.md
.claude/skills/tests-to-code/: SKILL.md
.claude/skills/tests-to-spec/: SKILL.md
.face/: app.json  news.json
.github/workflows/: deploy.yml  test.yml
_documents/: CHANGELOG.md
_documents/handoff/: 06-site-base-20260315.md  README.md
code/: index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
code/.face/: app.json
code/app/: CHANGELOG.md  index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
code/app/.face/: news.json
code/app/frontend/: App.svelte  app.css  main.ts
code/app/tauri/: Cargo.toml  build.rs  tauri.conf.json
code/frontend/: App.svelte  app.css  main.ts
code/frontend/assets/: default.hz  default_en.hz  default_en.hz-shm  personas.db  personas.json
code/frontend/components/: BreakOverlay.svelte  FocusDonePopup.svelte  Settings.svelte  SettingsForm.svelte  TimerControls.svelte  TimerStatus.svelte  Toast.svelte  TrayPanel.svelte
code/frontend/lib/: i18n.ts  (+2 more)
code/scripts/: publish.sh
code/tauri/: Cargo.toml  tauri.conf.json
code/tauri/capabilities/: default.json
code/tauri/icons/: icon.icns
code/tauri/src/: commands.rs  event_handlers.rs  hover_poll.rs  lib.rs  macos_window.rs  media.rs  overlay.rs  presence.rs  settings_loader.rs  timer.rs  timer_tests.rs  tray.rs
code/tauri/src/timer_tests/: apply_settings.rs  events.rs  mod.rs  new_and_display.rs  serialization.rs  skip_break.rs  stress.rs  tick_basic.rs
code/tauri/tests/: app_lifecycle.rs
code/tools/: publish.sh
docs/: cassette-spec.md
documents/: cassette-spec.md
documents/handoff/: face-directory.md
src/: App.svelte  app.css
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  timer.rs
src/lib/: BreakOverlay.svelte  Settings.svelte
tests/: test-run.sh
tests/integration/: app_lifecycle.rs
(+92 files in other folders)
