[package]
name = "hz52"
version = "0.7.0"
description = "A break reminder app inspired by DeskRest"
authors = []
license = "BUSL-1.1"
repository = "https://github.com/grad13/52Hz"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [ "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tokio = { version = "1", features = ["time", "sync"] }
chrono = "0.4"
rusqlite = { version = "0.34", features = ["bundled"] }
dirs = "6"

[dev-dependencies]
serial_test = "3.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSAppearance", "NSApplication", "NSColor", "NSEvent", "NSView", "NSWindow", "NSGraphicsContext", "NSStatusBar", "NSStatusItem", "NSStatusBarButton", "NSImage", "NSButton", "NSControl"] }
block2 = "0.6"
objc2-foundation = "0.3"
